--- a/morphing.ipynb
+++ b/morphing.ipynb
@@ -73,6 +73,7 @@
     "    return result\n",
     "\n",
     "def deformable_registration(source, target):\n",
+    "# Note: Windows users must remove .\ from paths \n",
     "    sourceArray = np.asarray(source.vertices,dtype=np.float32)\n",
     "    targetArray = np.asarray(target.vertices,dtype=np.float32)\n",
     "    targetPath = './target.txt'\n",
@@ -133,7 +134,7 @@
     "size = np.linalg.norm(np.asarray(pcd2.get_max_bound()) - np.asarray(pcd2.get_min_bound()))\n",
     "voxel_size = size / 55\n",
     "\n",
-    "# Preprocessing (downsaaample, estimate normals, compute FPFH features)\n",
+    "# Preprocessing (downsample, estimate normals, compute FPFH features)\n",
     "source_down, source_fpfh = preprocess_point_cloud(pcd1, voxel_size)\n",
     "target_down, target_fpfh = preprocess_point_cloud(pcd2, voxel_size)\n",
     "\n",
