--- a/morphing.ipynb
+++ b/morphing.ipynb
@@ -73,7 +73,7 @@
     "    return result\n",
     "\n",
     "def deformable_registration(source, target):\n",
-    "# Note: Windows users must remove .\ from paths \n",
+    "# Note: Windows users must remove ".\" from paths \n",
     "    sourceArray = np.asarray(source.vertices,dtype=np.float32)\n",
     "    targetArray = np.asarray(target.vertices,dtype=np.float32)\n",
     "    targetPath = './target.txt'\n",
