--- a/morphing.ipynb
+++ b/morphing.ipynb
@@ -237,12 +237,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Export meshes\n",
+    "o3d.io.write_triangle_mesh(r\"C:\\Users\\eherbst\\Morphing\\bcpd\\win\\source_deformed_to_target.stl\", deformed, write_ascii=False, compressed=False, write_vertex_normals=True, write_vertex_colors=True, write_triangle_uvs=True, print_progress=False)\n",
+    "o3d.io.write_triangle_mesh(r\"C:\\Users\\eherbst\\Morphing\\bcpd\\win\\merged.stl\", combined, write_ascii=False, compressed=False, write_vertex_normals=True, write_vertex_colors=True, write_triangle_uvs=True, print_progress=False)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "o3d",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -256,9 +260,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.9"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
