--- a/morphing.ipynb
+++ b/morphing.ipynb
@@ -239,8 +239,9 @@
    "outputs": [],
    "source": [
     "# Export meshes\n",
-    "o3d.io.write_triangle_mesh(r\"C:\\Users\\eherbst\\Morphing\\bcpd\\win\\source_deformed_to_target.stl\", deformed, write_ascii=False, compressed=False, write_vertex_normals=True, write_vertex_colors=True, write_triangle_uvs=True, print_progress=False)\n",
-    "o3d.io.write_triangle_mesh(r\"C:\\Users\\eherbst\\Morphing\\bcpd\\win\\merged.stl\", combined, write_ascii=False, compressed=False, write_vertex_normals=True, write_vertex_colors=True, write_triangle_uvs=True, print_progress=False)"
+    "currentDir = os.getcwd() \n",
+    "o3d.io.write_triangle_mesh(os.path.join(currentDir,\"source_deformed_to_target.stl\"), deformed, write_ascii=False, compressed=False, write_vertex_normals=True, write_vertex_colors=True, write_triangle_uvs=True, print_progress=False)\n",
+    "o3d.io.write_triangle_mesh(os.path.join(currentDir,\"merged.stl\"), combined, write_ascii=False, compressed=False, write_vertex_normals=True, write_vertex_colors=True, write_triangle_uvs=True, print_progress=False)"
    ]
   }
  ],
