--- a/morphing.ipynb
+++ b/morphing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -109,20 +109,21 @@
       ":: Compute FPFH feature with search radius 25.161.\n",
       ":: Downsample with a voxel size 2.516.\n",
       ":: Estimate normal with search radius 10.064.\n",
-      ":: Compute FPFH feature with search radius 25.161.\n"
+      ":: Compute FPFH feature with search radius 25.161.\n",
+      "\u001b[1;33m[Open3D WARNING] GLFW Error: Cocoa: Failed to find service port for display\u001b[0;m\n"
      ]
     }
    ],
    "source": [
     "# Load and meshes and obtain point clouds\n",
-    "mesh1 = o3d.io.read_triangle_mesh(\"O35_M_humerus_source.stl\")\n",
+    "mesh1 = o3d.io.read_triangle_mesh(\"./meshmorphing/O35_M_humerus_source.stl\")\n",
     "center1 = mesh1.get_center()\n",
     "mesh1.translate(-center1, relative=False)\n",
     "pcd1 = o3d.geometry.PointCloud()\n",
     "pcd1.points = mesh1.vertices\n",
     "pcd1.colors = mesh1.vertex_colors\n",
     "pcd1.normals = mesh1.vertex_normals\n",
-    "mesh2 = o3d.io.read_triangle_mesh(\"U35_F_humerus_partial_target.stl\")\n",
+    "mesh2 = o3d.io.read_triangle_mesh(\"./meshmorphing/U35_F_humerus_partial_target.stl\")\n",
     "center2 = mesh2.get_center()\n",
     "mesh2.translate(-center2, relative=False)\n",
     "pcd2 = o3d.geometry.PointCloud()\n",
@@ -145,15 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RegistrationResult with fitness=3.855042e-01, inlier_rmse=2.213073e+00, and correspondence_set size of 1468\n",
-      "Access transformation to get result.\n"
+      "RegistrationResult with fitness=3.752626e-01, inlier_rmse=2.001766e+00, and correspondence_set size of 1429\n",
+      "Access transformation to get result.\n",
+      "\u001b[1;33m[Open3D WARNING] GLFW Error: Cocoa: Failed to find service port for display\u001b[0;m\n"
      ]
     }
    ],
@@ -168,21 +170,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ":: Point-to-plane ICP registration is applied on original point\n",
-      "   clouds to refine the alignment. This time we use a strict\n",
-      "   distance threshold 1.006.\n",
-      "RegistrationResult with fitness=2.363069e-01, inlier_rmse=6.489267e-01, and correspondence_set size of 6437\n",
-      "Access transformation to get result.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Refining the rigid registration\n",
     "result_icp = refine_registration(pcd1, pcd2, source_fpfh, target_fpfh,\n",
@@ -193,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
