--- a/morphing.ipynb
+++ b/morphing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -109,20 +109,32 @@
       ":: Compute FPFH feature with search radius 25.161.\n",
       ":: Downsample with a voxel size 2.516.\n",
       ":: Estimate normal with search radius 10.064.\n",
-      ":: Compute FPFH feature with search radius 25.161.\n"
+      ":: Compute FPFH feature with search radius 25.161.\n",
+      "\u001b[1;33m[Open3D WARNING] GLFW Error: Cocoa: Failed to find service port for display\u001b[0;m\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 27\u001b[0m\n\u001b[1;32m     25\u001b[0m source_down\u001b[39m.\u001b[39mpaint_uniform_color([\u001b[39m1\u001b[39m, \u001b[39m0.706\u001b[39m, \u001b[39m0\u001b[39m])\n\u001b[1;32m     26\u001b[0m target_down\u001b[39m.\u001b[39mpaint_uniform_color([\u001b[39m0\u001b[39m,\u001b[39m0.706\u001b[39m, \u001b[39m1\u001b[39m])\n\u001b[0;32m---> 27\u001b[0m o3d\u001b[39m.\u001b[39;49mvisualization\u001b[39m.\u001b[39;49mdraw_geometries([source_down,target_down])\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "# Load and meshes and obtain point clouds\n",
-    "mesh1 = o3d.io.read_triangle_mesh(\"O35_M_humerus_source.stl\")\n",
+    "mesh1 = o3d.io.read_triangle_mesh(\"./meshmorphing/O35_M_humerus_source.stl\")\n",
     "center1 = mesh1.get_center()\n",
     "mesh1.translate(-center1, relative=False)\n",
     "pcd1 = o3d.geometry.PointCloud()\n",
     "pcd1.points = mesh1.vertices\n",
     "pcd1.colors = mesh1.vertex_colors\n",
     "pcd1.normals = mesh1.vertex_normals\n",
-    "mesh2 = o3d.io.read_triangle_mesh(\"U35_F_humerus_partial_target.stl\")\n",
+    "mesh2 = o3d.io.read_triangle_mesh(\"./meshmorphing/U35_F_humerus_partial_target.stl\")\n",
     "center2 = mesh2.get_center()\n",
     "mesh2.translate(-center2, relative=False)\n",
     "pcd2 = o3d.geometry.PointCloud()\n",
@@ -145,15 +157,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RegistrationResult with fitness=3.855042e-01, inlier_rmse=2.213073e+00, and correspondence_set size of 1468\n",
-      "Access transformation to get result.\n"
+     "ename": "NameError",
+     "evalue": "name 'source_down' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Global registration\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m result_ransac \u001b[39m=\u001b[39m execute_global_registration(source_down, target_down,\n\u001b[1;32m      3\u001b[0m                                             source_fpfh, target_fpfh,\n\u001b[1;32m      4\u001b[0m                                             voxel_size)\n\u001b[1;32m      5\u001b[0m \u001b[39mprint\u001b[39m(result_ransac)\n\u001b[1;32m      6\u001b[0m draw_registration_result(source_down, target_down, result_ransac\u001b[39m.\u001b[39mtransformation)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'source_down' is not defined"
      ]
     }
    ],
@@ -256,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
