Updated .gitignore and renamed meshmorphing folder

--- a/morphing.ipynb
+++ b/morphing.ipynb
@@ -123,18 +123,26 @@
       "Cell \u001b[0;32mIn[10], line 27\u001b[0m\n\u001b[1;32m     25\u001b[0m source_down\u001b[39m.\u001b[39mpaint_uniform_color([\u001b[39m1\u001b[39m, \u001b[39m0.706\u001b[39m, \u001b[39m0\u001b[39m])\n\u001b[1;32m     26\u001b[0m target_down\u001b[39m.\u001b[39mpaint_uniform_color([\u001b[39m0\u001b[39m,\u001b[39m0.706\u001b[39m, \u001b[39m1\u001b[39m])\n\u001b[0;32m---> 27\u001b[0m o3d\u001b[39m.\u001b[39;49mvisualization\u001b[39m.\u001b[39;49mdraw_geometries([source_down,target_down])\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
     "# Load and meshes and obtain point clouds\n",
-    "mesh1 = o3d.io.read_triangle_mesh(\"./meshmorphing/O35_M_humerus_source.stl\")\n",
+    "mesh1 = o3d.io.read_triangle_mesh(\"./meshes/O35_M_humerus_source.stl\")\n",
     "center1 = mesh1.get_center()\n",
     "mesh1.translate(-center1, relative=False)\n",
     "pcd1 = o3d.geometry.PointCloud()\n",
     "pcd1.points = mesh1.vertices\n",
     "pcd1.colors = mesh1.vertex_colors\n",
     "pcd1.normals = mesh1.vertex_normals\n",
-    "mesh2 = o3d.io.read_triangle_mesh(\"./meshmorphing/U35_F_humerus_partial_target.stl\")\n",
+    "mesh2 = o3d.io.read_triangle_mesh(\"./meshes/U35_F_humerus_partial_target.stl\")\n",
     "center2 = mesh2.get_center()\n",
     "mesh2.translate(-center2, relative=False)\n",
     "pcd2 = o3d.geometry.PointCloud()\n",
